README.md
Add some information about this sample...